--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,16 @@
 spring.application.name=Project_Tracker
 
-spring.datasource.url=jdbc:h2:mem:taskdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/project
+spring.datasource.username=postgres
+spring.datasource.password=newpassword
+
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.show-sql=true
-spring=jpa.properties.hibernate.format_sql=true
-
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.data.mongodb.host=localhost
